@@ -34,7 +34,7 @@
  *                mode * -p etc. if flag was clear
  *
  *
- * $Id: channel.c,v 1.172 1999/12/28 05:16:30 lusky Exp $
+ * $Id: channel.c,v 1.173 1999/12/29 03:28:47 lusky Exp $
  */
 #include "channel.h"
 #include "client.h"
@@ -4437,15 +4437,7 @@ int     m_sjoin(struct Client *cptr,
       clear_bans_exceptions_denies(sptr,chptr);
 
       if (haveops && !doesop)
-        {
           tstosend = oldts;
-          /* Only warn of Hacked ops if the ops are hacked
-           * on a channel from this side of the join
-           */
-
-          sendto_realops("Hacked ops locally on opless channel: %s",
-                         chptr->chname);
-        }
       else
         chptr->channelts = tstosend = newts;
     }
