@@ -19,7 +19,7 @@
  *
  *  (C) 1988 University of Oulu,Computing Center and Jarkko Oikarinen"
  *
- *  $Id: s_conf.c,v 1.177 1999/12/11 04:11:34 lusky Exp $
+ *  $Id: s_conf.c,v 1.178 1999/12/14 02:41:49 lusky Exp $
  */
 #include "s_conf.h"
 #include "channel.h"
@@ -2393,6 +2393,7 @@ static void initconf(FBFILE* file, int use_include)
         {
           dontadd = 1;
           MyFree(aconf->user);
+          aconf->user = (char *)NULL;
           aconf->name = aconf->host;
           aconf->host = (char *)NULL;
           aconf->next = u_conf;
